--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/sizwe_server
+spring.datasource.url=jdbc:mysql://localhost:3306/vehiclemanagementsystem
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
-spring.jap.hibernate.ddl-auto=create-drop
+spring.jap.hibernate.ddl-auto=update
 spring.jackson.serialization.fail-on-empty-beans=false
