--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,6 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
-spring.jap.hibernate.ddl-auto=update
+spring.jap.hibernate.ddl-auto=create-drop
 spring.jackson.serialization.fail-on-empty-beans=false
+#spring.jpa.hibernate.use-new-id-generator-mappings=false
